2009-07-10  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-ifunc/ifunc-1-local-x86.d: Updated.
	* ld-ifunc/ifunc-1-x86.d: Likewise.
	* ld-ifunc/ifunc-3a-x86.d: Likewise.

2009-07-10  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-ifunc/ifunc-1-local-x86.d: Updated.
	* ld-ifunc/ifunc-1-x86.d: Likewise.
	* ld-ifunc/ifunc-2-local-x86-64.d: Likewise.
	* ld-ifunc/ifunc-2-x86-64.d: Likewise.
	* ld-ifunc/ifunc-3a-x86.d: Likewise.

2009-07-10  Alan Modra  <amodra@bigpond.net.au>

	* ld-ifunc/ifunc.exp: Run for powerpc.  Really generate static
	executables, renaming the existing dynamic but local tests.

2009-07-08  Alan Modra  <amodra@bigpond.net.au>

	* ld-selective/selective.exp: Remove check that $CC contains the
	string "gcc".  Do -dumpversion for $CXX.

2009-06-30  Nick Clifton  <nickc@redhat.com>

	PR 10288
	* ld-arm/arm-app.d: Update expcted disassembly.
	* ld-arm/arm-be8.d: Likewise.
	* ld-arm/arm-call.d: Likewise.
	* ld-arm/arm-lib-plt32.d: Likewise.
	* ld-arm/arm-lib.d: Likewise.
	* ld-arm/arm-movwt.d: Likewise.
	* ld-arm/arm-pic-veneer.d: Likewise.
	* ld-arm/armthumb-lib.d: Likewise.
	* ld-arm/armv4-bx.d: Likewise.
	* ld-arm/cortex-a8-fix-b-rel-arm.d: Likewise.
	* ld-arm/farcall-mixed-app-v5.d: Likewise.
	* ld-arm/farcall-mixed-app.d: Likewise.
	* ld-arm/farcall-mixed-lib.d: Likewise.
	* ld-arm/farcall-thumb-arm-pic-veneer.d: Likewise.
	* ld-arm/farcall-thumb-arm-short.d: Likewise.
	* ld-arm/farcall-thumb-arm.d: Likewise.
	* ld-arm/farcall-thumb-thumb-m-pic-veneer.d: Likewise.
	* ld-arm/farcall-thumb-thumb-m.d: Likewise.
	* ld-arm/farcall-thumb-thumb-pic-veneer.d: Likewise.
	* ld-arm/farcall-thumb-thumb.d: Likewise.
	* ld-arm/group-relocs.d: Likewise.
	* ld-arm/mixed-app-v5.d: Likewise.
	* ld-arm/mixed-app.d: Likewise.
	* ld-arm/mixed-lib.d: Likewise.
	* ld-arm/movw-merge.d: Likewise.
	* ld-arm/thumb2-b-interwork.d: Likewise.
	* ld-arm/tls-app.d: Likewise.
	* ld-arm/tls-lib.d: Likewise.

2009-06-29  Nick Clifton  <nickc@redhat.com>

	PR 10288