@@ -1,5 +1,10 @@
 2009-07-10  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* ld-ifunc/ifunc.exp: Don't chck static non-ifunc-using
+	executable.
+
+2009-07-10  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* ld-ifunc/ifunc-1-local-x86.d: Updated.
 	* ld-ifunc/ifunc-1-x86.d: Likewise.
 	* ld-ifunc/ifunc-3a-x86.d: Likewise.
